cmake_minimum_required(VERSION 3.5)

project(LIBPNG_DDSL)

option(DDSL_EXT_LIB_PNG "PNG support in DDSL_TESTER" OFF)
option(BUILD_LIBPNG_DDSL "Build a library for PNG" OFF) 						#Depend on: DDSL_EXT_LIB_PNG

#function(addExtLibPNG)
#        message("* addExtLibPNG")
#        list(REMOVE_ITEM DEFS "DDSL_NO_EXT_LIB_PNG")
#        if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
#                set(ZLIB_ROOT ${DDSL_ROOT}/contrib/zlib-1.2.8)
#                find_package(ZLIB REQUIRED)
#                set(PNG_INCLUDE_DIRS ${DDSL_ROOT}/contrib/lpng1628)
#                set(PNG_LIBRARIES ${DDSL_ROOT}/contrib/lpng1628/build/Release/libpng16.lib)
#                set(PNG_LIBRARIES_DEBUG ${DDSL_ROOT}/contrib/lpng1628/build/Debug/libpng16d.lib)
#                target_link_libraries(${EXE_NAME} debug ${PNG_LIBRARIES_DEBUG} optimized ${PNG_LIBRARIES})
#        else()
#                #sudo apt-get install libpng-dev
#                #find_package(ZLIB REQUIRED)
#                find_package(PNG REQUIRED)
#                target_link_libraries(${EXE_NAME} ${PNG_LIBRARIES})
#        endif()
#        include_directories (${ZLIB_INCLUDE_DIRS})
#        include_directories (${PNG_INCLUDE_DIRS})
#        set(DEFS ${DEFS} PARENT_SCOPE)
#endfunction()
#function(addLibPNG)
#        message("* addLibPNG")
#        list(REMOVE_ITEM DEFS "DDSL_NO_EXT_LIB_PNG")
#        if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
#                target_link_libraries(${EXE_NAME} debug ${DDSL_ROOT}/build/Debug/png_ddsl.lib optimized ${DDSL_ROOT}/build/Release/png_ddsl.lib)
#        else()
#                #target_link_libraries(${EXE_NAME} ${PNG_LIBRARIES})
#                target_link_libraries(${EXE_NAME} ${CMAKE_BINARY_DIR}/libpng_ddsl.a)
#        endif()
#        include_directories (${DDSL_ROOT}/libpng_ddsl)
#        set(DEFS ${DEFS} PARENT_SCOPE)
#endfunction()
#function(addPNG)
#    message("* addPNG")
#    list(REMOVE_ITEM DEFS "DDSL_NO_EXT_LIB_PNG")
#    find_package(PNG REQUIRED)
#    target_link_libraries(${EXE_NAME} ${CMAKE_BINARY_DIR}/libpng_ddsl.a)
#    include_directories (${DDSL_ROOT}/libpng_ddsl)
#    set(DEFS ${DEFS} PARENT_SCOPE)
#endfunction()

if (BUILD_LIBPNG_DDSL)
        set (SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/png_ddsl.c")
        list (APPEND SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/png_ddsl.h")
        set (EXE_NAME "png_ddsl")
        message("Make lib ${EXE_NAME}")

        add_ddsl_h_files()
        add_ddsl_hpp_files()
        add_library(${EXE_NAME} STATIC ${SRC_FILES})
        add_ddsl_h_groups()
        add_ddsl_hpp_groups()

        set(DEFS ${DEFAULT_DEFS})
        addExtLibPNG()
        install(TARGETS ${EXE_NAME} DESTINATION lib)
        install(FILES ${CMAKE_CURRENT_LIST_DIR}/png_ddsl.h DESTINATION include/ddsl)
        set_target_properties(${EXE_NAME} PROPERTIES COMPILE_DEFINITIONS "${DEFS}")
endif()
